--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 *.jsonl filter=lfs diff=lfs merge=lfs -text
 *.p filter=lfs diff=lfs merge=lfs -text
 *.hdf5 filter=lfs diff=lfs merge=lfs -text
+*.zip filter=lfs diff=lfs merge=lfs -text
